--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.8.4",
     "@types/nodemon": "^1.19.2",
+    "@types/passport": "^1.0.11",
     "typescript": "^4.8.4"
   }
 }
