feat: implement auth via email (jwt) and user crud

--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ PORT = 3000
 DATABASE_URI = 'mongodb://localhost:27017/learnly'
 DATABASE_PASSWORD = password to MongoDB
 
-GITHUB_CLIENT_ID = 3ef818cca1179b87e1d2
-GITHUB_CLIENT_SECRET = 76c2f39da7662a4bc8bdd6da26679ac009de0ab2
+saltWorkFactor= 12
+JWT_SECRET=piggy-bank-secret-key
+JWT_EXPIRES_IN_MS=360000
+
+NODE_ENV=development
