--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "dev": "nodemon ./src/server.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/validator": "^13.7.8",
+    "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0",
-    "passport-github": "^1.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/express-session": "^1.17.5",
     "@types/node": "^18.8.4",
     "@types/nodemon": "^1.19.2",
-    "@types/passport": "^1.0.11",
     "typescript": "^4.8.4"
   }
 }
