--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "morgan": "1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "3",
+    "zod": "3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.4",
     "@types/nodemon": "^1.19.2",
     "typescript": "^4.8.4"
