--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,32 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ESNext",
     "module": "commonjs",
+    "moduleResolution": "node",
     "allowJs": true,
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "lib": ["esnext"],
     "importsNotUsedAsValues": "remove",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@common/*": ["src/common/*"],
+      "@env": ["src/env"],
+      "@utils/*": ["src/common/utils/*"],
+      "@modules/*": ["src/modules/*"],
+      "@dtos/*": ["src/dtos/*"],
+      "@middlewares/*": ["src/common/middlewares/*"],
+      "@type": ["src/types"],
+      "@type/*": ["src/types/*"],
+      "@lib/*": ["src/common/lib/*"],
+      "@lib": ["src/common/lib"],
+      "@src/*": ["src/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
