fix: fix bags of refactoring

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DATABASE_URI = 'mongodb://localhost:27017/learnly'
+DATABASE_URL = 'mongodb://localhost:27017/learnly'
 DATABASE_PASSWORD = password to MongoDB
 
 saltWorkFactor= 12
