--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Mansur Isakov",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/server.ts"
+    "dev": "NODE_ENV=development nodemon --config ./nodemon.json ",
+    "dev:start": "ts-node -r tsconfig-paths/register --transpile-only src/server.ts",
+    "build": "tsc && tsc-alias",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/server.js"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -36,6 +39,8 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.4",
     "@types/nodemon": "^1.19.2",
+    "tsc-alias": "^1.7.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
 }
