feat: add core and optional modules

--- a/.env
+++ b/.env
@@ -6,4 +6,7 @@ saltWorkFactor= 12
 JWT_SECRET=piggy-bank-secret-key
 JWT_EXPIRES_IN_MS=360000
 
+MODULE_CREDITS = 100
+CREDITS_PER_MODULE = 20
+
 NODE_ENV=development
